--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>萝莉妈妈-loli.ma</title>
+    <title>巫师</title>
       
     <!--Leancloud 操作库:-->
     <!--<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>-->
@@ -10,70 +9,20 @@
     <!--<script src="https://cdn.8hu.cn/js/mibiao/Valine.min.js"></script>-->
 
 </head>
-<html><head><meta charset="UTF-8"><title>萝莉妈妈</title>
+<html><head><meta charset="UTF-8"><title>巫师</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="https://cdn.vin/mibiao/bg.css">
- 
-</head><body>
 
-<div class="wp"> 
-	<div class="center"><div class="brand"><h1><a href="./">萝莉妈妈</a></h1></div></div>
-	<div class="box">
-		<div class="e"><div class="card"><div class="row"><h5>Hou.lu</h5><span class="price">1888</span></div><p>后路  给自己留条后路</p></div></div><div class="e"><div class="card"><div class="row"><h5>Suo.ma</h5><span class="price">2888</span></div><p>缩吗 短网址</p></div></div><div class="e"><div class="card"><div class="row"><h5>moe.mw</h5><span class="price">1200</span></div><p>萌王、魔王</p></div></div><div class="e"><div class="card"><div class="row"><h5>diao.ma</h5><span class="price">3888</span></div><p>屌吗 </p></div></div><div class="e"><div class="card"><div class="row"><h5>ovo.tf</h5><span class="price">200</span></div><p>OVO 表情包 萌哒</p></div></div><div class="e"><div class="card"><div class="row"><h5>Jiba.cm</h5><span class="price">200</span></div><p>鸡巴   趣域</p></div></div><div class="e"><div class="card"><div class="row"><h5>KKB.CM</h5><span class="price">150</span></div><p>看看㊙️   趣域</p></div></div><div class="e"><div class="card"><div class="row"><h5>OFO.CM</h5><span class="price">150</span></div><p>共享单车  小黄车  趣域</p></div></div><div class="e"><div class="card"><div class="row"><h5>PPT.CM</h5><span class="price">500</span></div><p>PPT传媒 模板网站  趣域</p></div></div><div class="e"><div class="card"><div class="row"><h5>9nn.cn</h5><span class="price">899</span></div><p>极品cn域名  代售</p></div></div><div class="e"><div class="card"><div class="row"><h5>Wai.Ge</h5><span class="price">399</span></div><p>原价 500，限时399,代售</p></div></div><div class="e"><div class="card"><div class="row"><h5>ii.sy</h5><span class="price">999</span></div><p>爱烧鸭  爱爱手游  代售</p></div></div><div class="e"><div class="card"><div class="row"><h5>Kou.Bi</h5><span class="price">议价</span></div><p>扣币</p></div></div><div class="e"><div class="card"><div class="row"><h5>loli.ma</h5><span class="price">议价</span></div><p>萝莉</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>90.mk</h5><span class="price">已售</span></div><p>九零萌咔</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>Ca.bi</h5><span class="price">已售</span></div><p>擦逼</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>Fuck.cat</h5><span class="price">已售</span></div><p>法克猫</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>Loli.fan</h5><span class="price">已售</span></div><p>萝莉番</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>Mai.Ba</h5><span class="price">已售</span></div><p>麦霸  企业备案  趣域</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>RRW.PW</h5><span class="price">已售</span></div><p>人人网</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>VIP.SB</h5><span class="price">已售</span></div><p>VIP 傻逼 烧饼，续费333</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>VPS.SI</h5><span class="price">已售</span></div><p>VPS</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>oss.ren</h5><span class="price">已售</span></div><p>精品短米，企业备案</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>use.ee</h5><span class="price">已售</span></div><p>使用</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>wap.ac</h5><span class="price">已售</span></div><p>WAP</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>xxs.me</h5><span class="price">已售</span></div><p>新鲜事，小学生  西部</p></div></div><div class="e sold"><div class="card"><div class="row"><h5>zzw.pw</h5><span class="price">已售</span></div><p>站长网</p></div></div><div class="e"><div class="card"><div class="row"><h5>8hu.cn</h5><span class="price">非卖品</span></div><p>个备 情怀米</p></div></div><div class="e"><div class="card"><div class="row"><h5>cdn.vin</h5><span class="price">非卖品</span></div><p>企备 自用cdn</p></div></div><div class="e"><div class="card"><div class="row"><h5>Dai.Ge</h5><span class="price">非卖品</span></div><p>呆哥 阿呆</p></div></div><div class="e"><div class="card"><div class="row"><h5>Tool.hk.cn</h5><span class="price">非卖品</span></div><p>企备 工具箱</p></div></div><div class="e"><div class="card"><div class="row"><h5>Tu.hk.cn</h5><span class="price">非卖品</span></div><p>企备 自用图床</p></div></div><div class="e"><div class="card"><div class="row"><h5>loc.cc</h5><span class="price">非卖品</span></div><p>企备 自用论坛米</p></div></div>
-	</div>
-
-
-
-	<a href="//loc.cc" target="_blank"><div class="widget widget_red"><strong>全球域名交流论坛</strong><h2>米友们都在玩的圈子</h2><p>互联网综合交流、主机优惠、域名行情：www.loc.cc</p></div></a>
-		<div class="widget widget_links">
-			<h3>友情链接</h3>
-			<div class="mibiao">
-				<a href="https://ci.ke/">刺客联盟</a>
-				<a href="http://hacker.hk/">黑客米表</a>
-				<a href="http://pp.ma/">数字米表</a>
-				<a href="http://di.bi/">迪比米表</a>
-				<a href="http://zhen.plus/">珍品米店</a>
-				<a href="http://tool.hk.cn/">工具箱</a>
-				
+	<div class="center"><div class="brand"><h1><a href="./">巫师</a></h1></div></div>
 				<div class="cl"></div>
 			</div>
 		</div>
 		<div class="widget">
 			<h3>联系方式</h3>
-			<div style="font-size:14px;line-height:30px;margin:15px">Email: <span id="c_e">hi@loli.ma</span><br>QQ: <span id="c_q">6284136</span><br>WeChat: <span id="c_t">woqnmmp</span></div>
+			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗧𝗲𝗹𝗲𝗴𝗿𝗮𝗺: <span id="c_t">@WUSHIXXX</span></div>
 		</div>
 		
-		<div class="widget">
-			<h3>其他</h3>
-			<div style="text-align:center"><br>loc非人類QQ群：<span id="c_g"></span><a href="https://qm.qq.com/cgi-bin/qm/qr?k=CR_r9VRGLkaL9X6Oyi3eu8WDW3j1aCXd&jump_from=webapi/" target="_blank">925568799<br><img src="//tu.loc.cc/img/141" width="200" height="200" /></a></div>
-		</div>
+		
 	
 
 
- <!--
- <div class="widget">
-<h3>给我留言 </h3>
-  <div style="font-size:14px;line-height:30px;margin:15px">
-<div class="comment"></div>
- <script>
- new Valine({
-            // AV 对象来自上面引入av-min.js(老司机们不要开车➳♡゛扎心了老铁)
-            av: AV, 
-            el: '.comment', // 
-            app_id: 'yRkjExai0dVnWPSL9f7OmthF-gzGzoHsz', // 这里填写上面得到的APP ID
-            app_key: 'oOEmj0KMRVMAxMbMOfLWP5SD', // 这里填写上面得到的APP KEY
-            placeholder: '发表留言，请遵守法律法规，文明言语！' // [v1.0.7 new]留言框占位提示文字
-        });
-    </script></div>
-    -->
-    <div class="cl"></div>
-<div id='split-pane-or'>
-  </div>
-</div></div><div class="foot">©  <a href="//dai.ge" target="_blank">阿呆</a> 米表</div>
-</div>
-</body><embed src="https://mp3.9ku.com/mp3/571/570164.mp3
-
-" hidden="true" autostart="true" loop="5"> 
-
-<script src="https://cdn.vin/loli/loli.min.js"></script>
-</html>
