--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 			<h3>联系方式</h3>
 			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗧𝗲𝗹𝗲𝗴𝗿𝗮𝗺: <span id="c_t">@WUSHIXXX</span></div>
 		</div>
-		
+		<!--adstart-->
+<p><a href="https://t333t.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">【站长5千万担保】太阳城集团，全球十强娱乐公司，信誉保证！百万提现秒到账！→【点击注册】</span></strong></a></p>
 		
 	
 
