--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!--<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>-->
     <!--Valine 的核心代码库:-->
     <!--<script src="https://cdn.8hu.cn/js/mibiao/Valine.min.js"></script>-->
-
+<div class="brand" id="logo"><span>巫师</span><span class="flag">团队</span></div>
+	
 </head>
 <html><head><meta charset="UTF-8"><title>巫师</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
