--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <title>巫师</title>
@@ -24,7 +24,9 @@
 		</div>
 		<!--adstart-->
 <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">【亿博体育】→【点击注册】</span></strong></a></p>
-		
+	<div class="ft">
+        <a id="tiaozhuan" href="http://yibobet833.com">-- 进入亿博体育 --</a>
+    </div>	
 	
 
 
