--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
 			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗧𝗲𝗹𝗲𝗴𝗿𝗮𝗺: <span id="c_t">@WUSHIXXX</span></div>
 		</div>
 		<!--adstart-->
-<p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">【亿博体育】→【点击注册】</span></strong></a></p>
-	<div class="ft">
-        <a id="tiaozhuan" href="http://yibobet833.com">-- 进入亿博体育 --</a>
-    </div>	
+<p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">-- 【进入亿博】 --</span></strong></a></p>
+
 	
 
 
