--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>巫师</title>
       
     <!--Leancloud 操作库:-->
@@ -25,6 +25,8 @@
 		<!--adstart-->
 <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">-- 【进入亿博】 --</span></strong></a></p>
 
-	
+
+</body>
+</html>
 
 
