--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!--<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>-->
     <!--Valine 的核心代码库:-->
     <!--<script src="https://cdn.8hu.cn/js/mibiao/Valine.min.js"></script>-->
-<p class="header_title" id="yuming" style="color: #e78f1d;">www.wushi.xxx</p>
+	
+<p class="header_title" id="yuming" style="color: #e78f1d;">wushi.xxx</p>
 	
 </head>
 <html><head><meta charset="UTF-8"><title>巫师</title>
