--- a/index.html
+++ b/index.html
@@ -30,4 +30,38 @@
 </body>
 </html>
 
+<html>
 
+<head>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+
+<title>文字垂直居中</title>
+
+<style type="text/css">
+
+body{background: #ddd;}
+
+div{width:300px;height:180px;margin:10px auto;color:#fff;font-size:24px;}
+
+.box1{background: #71a879;text-align: center;}
+
+.box2{background: #6a8bbc;line-height: 200px;}
+
+.box3{background: #dea46b;text-align: center;line-height: 200px;}
+
+</style>
+
+</head>
+
+<body>
+
+<div  class="box1">文字水平居中</div>
+
+<div  class="box2">文字垂直居中</div>
+
+<div  class="box3">文字水平垂直居中</div>
+
+</body>
+
+</html>
