--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 		<div class="widget">
 			<h3>联系方式</h3>
 			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗧𝗲𝗹𝗲𝗴𝗿𝗮𝗺: <span id="c_t">@WUSHIXXX</span></div>
-		</div>
+		<div class="ft">
+        <a id="tiaozhuan" href="https://www.flygram1.im/">下载Flygram</a>
+    </div>
+	</div>
 		<!--adstart-->
 <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">-- 【进入亿博】 --</span></strong></a></p>
 
@@ -31,99 +34,3 @@
 </html>
 
 
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>要看网 要看影院</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="pragma" content="no-cache">
-    <meta http-equiv="cache-control" content="no-cache">
-    <meta http-equiv="expires" content="0">
-    <meta http-equiv="keywords" content="成人在线，夜夜撸，免费A片，色影院，日日更新视频，草榴视频，乱伦，人体艺术，色吧图片，成人小说">
-    <meta http-equiv="description" content="成人在线，夜夜撸，免费A片，色影院，日日更新视频，草榴视频，乱伦，人体艺术，色吧图片，成人小说">
-	<script type='text/javascript' language=javascript src='/js/jjj.htm'></script>
-	<script type='text/javascript' language=javascript src='/js/logo.htm'></script>
-    <link rel="stylesheet" href="/css/enter.css">
-</head>
-<body>
-<div id="main"><div class="brand" id="logo"><span>要看影院</span><span class="flag">地址发布页</span></div></div>
-<div class="container">
-    <div>
-        <p>本站经常会更换域名,请多记几个本站域名防止失联</p>
-	<p class="header_title" id="yuming" style="color: #e78f1d;"></p>
-        <p>⇧ ⇧ ⇧ 请牢记本站最新网址 ⇧ ⇧ ⇧</p>
-    </div>
-    <br />
-    <div class="ft">
-        <a id="tiaozhuan" href="javascript:void(0);">-- 进入要看影院 --</a>
-    </div>
-    <br />
-    <div class="ft1" style="font-weight: bold">
-        <a href="/qrcode/" target="_blank">保存本站二维码</a>
-    </div>
-    <div class="ft2">
-<!--adstart-->
-<p><a href="https://t333t.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">【站长5千万担保】太阳城集团，全球十强娱乐公司，信誉保证！百万提现秒到账！→【点击注册】</span></strong></a></p>
-<p><a href="https://98hta.com" target="_blank"><strong><span style="background-color:#ff00ff; color:#FFFFFF;">♠️黑桃A娱乐-AA2.COM♠️最顶级的线上娱乐-最华丽的嫩模助兴-站长担保-大额无忧☛点击成就辉煌</span></strong></a></p>
-<p><a href="https://33y97.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">33Y.com澳门赌场线上投注平台【本平台受澳门博监局监督】提款100%通过率！存取秒到！疫情期间让您足不出户放心投注☛☛【点击开启体验之旅】</span></strong></a></p>
-<!--adend-->
-    </div>
-    <p style="color:#ff0000">
-        要看网海外(翻墙)永久网址 www.yaokan.com 本站经常会更换网站域名，请收藏10个以上最新域名，才可保证永久访问本站！
-    </p>
-    <p style="color:#ff0000">
-        如果点击进入后打不开本站，请换（电信或联通）网络在访问本站，移动网络频繁屏蔽本站～
-    </p>
-
-	<div class="field desc"><h4 class="title">温馨提示</h4>
-			<ul>	
-				<li>* 由于18+网站容易遭到封锁，因此网站都不稳定，而本发布页永久可用，请务必将本站加入收藏，避免迷路！</li>
-				<li>* 当你发现要看影院航地址不能正常访问时，打开此发布页即可获取最新可用地址</li>
-				<li>* 建议每次浏览要看影院都先打开此发布页，再由发布页进入要看影院，以确保每次都能正常浏览</li>	
-			
-				<p class="c_black">1、使用电脑的用户，请按键盘上的CTRL+D进行收藏
-                </p>
-                <p class="c_black">2、苹果手机用户在浏览器点击
-                    <span class="icon icon_ios_shared small-img"></span>，然后添加到个人收藏或者添加到主屏幕
-                </p>
-                <p class="c_black">3、安卓手机用户点击
-                    <span class="icon icon_android_share small-img"></span>，或者打开设置，然后添加到书签或者添加到主屏幕</p>					
-			</ul>
-
-    </div>
-<script language="javascript" type="text/javascript">
-document.getElementById("tiaozhuan").href="/home.htm";
-document.getElementById("yuming").innerHTML = "www."+LockDomain;
-document.title = LockDomain + "要看网 要看影院";
-</script>
-</div>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?825b27182ababe080292a4a4e7d3266f";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?1bea67a2a59f3db6e9888cc4e0f1ea97";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
-
-
-<div style="display:none"><script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278012569&web_id=1278012569"></script></div>
-<div style="display:none"><script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1278919877&web_id=1278919877"></script></div>
-
-</body>
-</html>
