--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!--Valine 的核心代码库:-->
     <!--<script src="https://cdn.8hu.cn/js/mibiao/Valine.min.js"></script>-->
 	
-<p class="header_title" id="yuming" style="color: #e78f1d;">wushi.xxx</p>
 	
 </head>
 <html><head><meta charset="UTF-8"><title>巫师</title>
@@ -21,9 +20,9 @@
 		</div>
 		<div class="widget">
 			<h3>联系方式</h3>
-			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗧𝗲𝗹𝗲𝗴𝗿𝗮𝗺: <span id="c_t">@WUSHIXXX</span></div>
+			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗙𝗹𝘆𝗴𝗿𝗮𝗺: <span id="c_t">@wushi</span></div>
 		<div class="ft">
-        <a id="tiaozhuan" href="https://www.flygram1.im/">下载Flygram</a>
+        <a id="tiaozhuan" href="https://www.flygram1.im/">下载 Flygram</a>
     </div>
 	</div>
 		<!--adstart-->
