--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 		<div class="widget">
 			<h3>联系方式</h3>
 			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗙𝗹𝘆𝗴𝗿𝗮𝗺: <span id="c_t">@wushi</span></div>
-		<div class="ft">
-        <a id="tiaozhuan" href="https://www.flygram1.im/">下载 Flygram</a>
+
     </div>
 	</div>
 		<!--adstart-->
-<p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">-- 【进入亿博】 --</span></strong></a></p>
+	<p><a href="https://flygram1.im" target="_blank"><strong><span style="background-color:#ff00ff; color:#FFFFFF;">【下载Flygram】</span></strong></a></p>
+        <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">-- 【下载亿博】 --</span></strong></a></p>
 
 
 </body>
