--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 	</div>
 		<!--adstart-->
-	<p><a href="https://flygram1.im" target="_blank"><strong><span style="background-color:#ff00ff; color:#FFFFFF;">【下载Flygram】</span></strong></a></p>
+	<p><a href="https://flygram1.im" target="_blank"><strong><span style="background-color:#ff00ff; color:#000000;">-- 【下载Flygram】 --</span></strong></a></p>
         <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">-- 【下载亿博】 --</span></strong></a></p>
 
 
