--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 	</div>
 		<!--adstart-->
 	<p><a href="https://flygram1.im" target="_blank"><strong><span style="background-color:#85C1E9; color:#000000;">【下载Flygram】</span></strong></a></p>
-        <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">--【下载亿博】--</span></strong></a></p>
-
+<div align="center" style="border:1px solid red">
+<p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">--【下载亿博】--</span></strong></a></p>
+</div>
 
 </body>
 </html>
