--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			<h3>联系方式</h3>
 			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗙𝗹𝘆𝗴𝗿𝗮𝗺: <span id="c_t">@wushi</span></div>
 
-    </div>
+</div>
+<div align="center" style="border:1px solid red">
 	</div>
 		<!--adstart-->
 	<p><a href="https://flygram1.im" target="_blank"><strong><span style="background-color:#85C1E9; color:#000000;">【下载Flygram】</span></strong></a></p>
