--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 				<div class="cl"></div>
 			</div>
 		</div>
-<div align="center" style="border:1px solid red">
+<div align="center" style=>
 		<div class="widget">
 			<h3>联系方式</h3>
 			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗙𝗹𝘆𝗴𝗿𝗮𝗺: <span id="c_t">@wushi</span></div>
