--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>巫师</title>
 
-
-	<div class="center"><div class="brand"><h1><a href="./">巫师</a></h1></div></div>
+<h1 align="center">巫师</h1>
 				<div class="cl"></div>
 			</div>
 		</div>
