--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>巫师</title>
 	
-<body background="/i/eg_bg_06
+<body background="/eg_bg_06
 .gif">
 	
 <h1 align="center">巫师</h1>
