--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 <body background="/eg_bg_06
 .gif">
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" href="favicon.ico"></head>
 	
 <h1 align="center">巫师</h1>
 				<div class="cl"></div>
