--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>巫师</title>
-    <link rel="shortcut icon" href="favicon.ico"></head>
+    <link rel="icon" href="../favicon.ico">
 <body background="/eg_bg_06
 .gif">
 
