--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>巫师</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <span style="white-space:pre">
+    </span><link href="https://wushixxx.github.io/favicon.ico" rel="icon" type="image/x-icon" />
 <body background="/eg_bg_06
 .gif">
 
