--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>巫师</title>
     <span style="white-space:pre">
-    </span><link href="https://wushixxx.github.io/favicon.ico" rel="icon" type="image/x-icon" />
+    </span><link href="https://wushixxx.github.io/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 <body background="/eg_bg_06
 .gif">
 
