--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>巫师</title>
     <span style="white-space:pre">
     </span><link href="https://wushixxx.github.io/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+</head>
 <body background="/eg_bg_06
 .gif">
 
