--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	<p><a href="https://flygram1.im" target="_blank"><strong><span style="background-color:#85C1E9; color:#000000;">【下载Flygram】</span></strong></a></p>
         <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">--【下载亿博】--</span></strong></a></p>
 </div>
-
+<div align="center" style=>
+<a class="Footer-item" target="_blank" rel="noopener noreferrer" ><img src="https://pic3.zhimg.com/80/v2-d0289dc0a46fc5b15b3363ffa78cf6c7.png">© 2021 巫师</p>
 </body>
 </html>
 
