--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 <body background="/eg_bg_06
 .gif">
 
-	<h1 align="center">巫师</h1>
 				<div class="cl"></div>
 			</div>
+
+</div>
+<div align="center" style=>
 		<div class="widget">
 			<h3>联系方式</h3>
 			<div style="font-size:14px;line-height:30px;margin:15px">📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗙𝗹𝘆𝗴𝗿𝗮𝗺: <span id="c_t">@wushi</span></div>
