--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body background="/eg_bg_06
 .gif">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+
 	<h1 align="center">巫师</h1>
 
 				<div class="cl"></div>
