--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">--【下载亿博】--</span></strong></a></p>
 	
 
-<img src="/piaozhao.png" />
+<img src="/paizhao.png" />
 
 </body>
 </html>
