--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 
 
-	<h1 align="center">巫师</h1>
+	<h1 align="center">巫師</h1>
 
 </div>
 <div align="center" style=>
