--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 
-
+<p>
+<img src="/logo.png" width="150" height="50" />
+</p>
 	<h1 align="center">巫師</h1>
 
 </div>
