--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div align="center" style=>
 	</div>
 		<!--adstart-->
-	<p><a href="https://flygram1.im" target="_blank"><strong><span style="background-color:#85C1E9; color:#000000;">【下载Flygram】</span></strong></a></p>
+	<p><a href="https://flygram1.im" target="_blank"><strong><span style="background-color:#454545; color:#FFFFFF;">【下载Flygram】</span></strong></a></p>
         <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#FFFF00; color:#FF0000;">--【下载亿博】--</span></strong></a></p>
 	
 <a class="comments" id="comment-button"><img class="boat" src="boat.png"></a>
