--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 		<!--adstart-->
 	<p><a href="https://flygram1.im" target="_blank"><strong><span style="background-color:#454545; color:#FFFFFF;">【下载Flygram】</span></strong></a></p>
- 
+        <p><a href="http://yibobet833.com" target="_blank"><strong><span style="background-color:#454545; color:#FFFFFF;">【进 入 亿 博】</span></strong></a></p>
 	
 <a class="comments" id="comment-button"><img class="boat" src="boat.png"></a>
 
