--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </head>
     <body>
      
-       <div id="footer">Copyright © 2021 WUSHI. PH MANILA 🇵🇭</div>
+       <div id="footer">Copyright © 2021 WUSHI.</div>
     </body>
 
 
