--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
        <div id="footer">Copyright © 2021 WUSHI.</div>
     </body>
 
+			
+<center>
+<font color='gray' size='2'>
+Copyright&copy 2021 WUSHI.
+</font>
+</center>
 
 </body>
 </html>
