--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 bottom: 0;
                 width: 100%;
                 text-align: center;
-                background: #333;
-                color: #fff;
+                background: #fff;
+                color: #333;
                 font-family: Arial;
                 font-size: 12px;
                 letter-spacing: 1px;
@@ -54,12 +54,7 @@
        <div id="footer">Copyright © 2021 WUSHI.</div>
     </body>
 
-			
-<center>
-<font color='gray' size='2'>
-Copyright&copy 2021 WUSHI.
-</font>
-</center>
+
 
 </body>
 </html>
