--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        <div id="footer">Copyright&copy 2021 WUSHI</div>
     </body>
 
-
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="1e1be354-fcde-4673-b236-c1e1d86b45d9";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
 </body>
 </html>
