--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         data-coins="bitcoin,ethereum,tether,ripple,cardano"
         data-show-symbol="true"
         data-show-icon="true"
-        data-show-period-change="true"
+        data-show-period-change="false"
         data-period-change="24H"
         data-api-url="https://api.cryptorank.io/v0"
       >
-        <a href="https://cryptorank.io">Coins by Cryptorank</a>
+        <a href="https://cryptorank.io"></a>
         <script src="https://cryptorank.io/widget/marquee.js"></script>
       </div>
 
