--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>巫师</title>
 	
 <div id="cr-widget-marquee"
-        data-coins="bitcoin,ethereum,tether,ripple,cardano"
+        data-coins="bitcoin,cardano,binance-coin,uniswap,polkadot-new,litecoin,chainlink,filecoin,dogecoin"
         data-show-symbol="true"
         data-show-icon="true"
         data-show-period-change="false"
