--- a/index.html
+++ b/index.html
@@ -3,17 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>巫师</title>
 	
-<div id="cr-widget-marquee"
-        data-coins="bitcoin,cardano,binance-coin,uniswap,polkadot-new,litecoin,chainlink,filecoin,dogecoin"
-        data-show-symbol="true"
-        data-show-icon="true"
-        data-show-period-change="false"
-        data-period-change="24H"
-        data-api-url="https://api.cryptorank.io/v0"
-      >
-        <a href="https://cryptorank.io"></a>
-        <script src="https://cryptorank.io/widget/marquee.js"></script>
-      </div>
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 
@@ -23,7 +13,7 @@
 <div align="center" style=>
 		<div class="widget">
 			<h3>联系方式</h3>
-                        <div><strong>📞: <span id="c_q">+1 (305) 859-1528</span><br>𝗙𝗹𝘆𝗴𝗿𝗮𝗺: <span id="c_t">@wushi</span><strong></div><hr />
+                        <div><strong>短信: <span id="c_q">+63 9152171751</span><br>𝗙𝗹𝘆𝗴𝗿𝗮𝗺: <span id="c_t">@wushi</span><strong></div><hr />
 </div>
 <div align="center" style=>
 	</div>
