--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@ bg-eggshell
   <div class="flex flex-1 flex-col items-center justify-center text-center py-10 text-gray-800 text-xl text-center">
     <div class="flex items-center justify-center text-center font-bold">
       <img class="wave object-contain h-10 w-10 pr-1" alt="wave" src="static/picture/icon_wave.2872aeea710c.png">
-      Clubhouse
+      巫师
     </div>
     <div class="mt-8 text-gray-700 max-w-md">
-      Hey, we're still opening up but anyone can join with an invite from an existing user!
+      短信：+63 9152171751   Flygram：wushi
     </div>
 
     <div class="mt-8 px-1 sm:px-14 text-gray-700 max-w-md text-sm">
