--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ bg-eggshell
       巫师
     </div>
     <div class="mt-8 text-gray-700 max-w-md">
-      短信：+63 9152171751   Flygram：wushi
+      <p>短信：+63 9152171751</p><p>Flygram：wushi</p>
     </div>
 
     <div class="mt-8 px-1 sm:px-14 text-gray-700 max-w-md text-sm">
